--- a/Website/style.css
+++ b/Website/style.css
@@ -545,7 +545,7 @@ body {
   position: relative;
   width: 100%;
   height: 550px; 
-  background: url("/IMG/page 5/foot2.jpg") center/cover no-repeat;
+  background: url("IMG/page-5/foot2.jpg") center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: flex-start; 
